Add filebeat 5-a4 to test.

--- a/filebeat-5.0.0-alpha4.yml
+++ b/filebeat-5.0.0-alpha4.yml
@@ -22,6 +22,8 @@ filebeat:
         rvl: 
           client: ul-dbg
           index: ul-dbg-filebeat
+        beat:
+          version: 5.0.0-alpha4		  
       
       ignore_older: 168h
       close_older: 30h
